# shell-cmd-on-change

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-test.txt  setup.cfg  tox.ini
.github/workflows/: unit-test.yml
src/post_merge_hooks/: remind_poetry_install.py  shell_cmd_on_change.py  utils.py
src/shell_cmd_on_change/: __init__.py  exceptions.py  utils.py
tests/: test_argparse.py  test_get_watched_files.py  test_git_utils.py  test_watched_files_changed.py
