[metadata]
name = post-merge-hooks
version = 0.3.0
author = Ke Xue
author_email = xueke.kent@gmail.com 
description = Post-merge hooks to be used by the pre-commit package.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = ==3.11
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
install_requires =
    pygit2 == 1.14.1
    colorama == 0.4.6

[options.packages.find]
where = src

[options.package_data]
post_merge_hooks = py.typed

[options.entry_points]
console_scripts =
    shell-cmd-on-change = post_merge_hooks.shell_cmd_on_change:main
    remind-poetry-install = post_merge_hooks.remind_poetry_install:main
